ghc-4335c07/testsuite/tests/typecheck/should_fail/TcNoNullaryTC.hs
module NoNullaryTC where

class A where
  f :: a -> a
