ghc-4335c07/testsuite/tests/typecheck/should_fail/TcNoNullaryTC.stderr

TcNoNullaryTC.hs:3:1: error:
    • No parameters for class ‘A’
      (Enable MultiParamTypeClasses to allow no-parameter classes)
    • In the class declaration for ‘A’
